# TypeTrace

./: .clang-format  .clang-tidy  .cspell.yaml  .cspell_ignored  CMakeLists.txt  LICENSE  README  conanfile.txt  makefile
typetrace/backend/: CMakeLists.txt  cli.hpp  database_manager.hpp  event_handler.hpp  main.cpp
typetrace/common/: CMakeLists.txt  constants.hpp  errors.hpp  exceptions.hpp  logger.hpp  macros.hpp  sql.hpp  types.hpp  version.hpp.in
typetrace/frontend/: .clang-tidy  CMakeLists.txt  application.hpp  main.cpp  typetrace.gresource.xml  window.hpp
typetrace/frontend/models/: keyboard_layouts.hpp  keystroke_object.hpp  keystroke_store.hpp
typetrace/frontend/ui/: heatmap.blp  preferences.blp  statistics.blp  verbose.blp  window.blp
typetrace/frontend/utils/: color_utils.hpp
typetrace/frontend/views/: heatmap_view.hpp  statistics_view.hpp  verbose_view.hpp
